# edef

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: linear_classification_basic.py  linear_multiclass_basic.py  linear_regression_basic.py  numerical_mlp_classification_basic.py  numerical_mlp_regression_basic.py  torch_classification_basic.py  torch_multiclass_basic.py  torch_regression_basic.py  tree_classification_basic.py  tree_multiclass_basic.py  tree_regression_basic.py
notebooks/: 01_linear_regression_quickstart.ipynb  02_linear_classification_quickstart.ipynb  03_tree_regression_quickstart.ipynb  04_tree_classification_quickstart.ipynb  05_shap_vs_edef.ipynb
src/edef/: __init__.py  _jax.py  _linear.py  _numerical.py  _results.py  _torch.py  _tree.py
tests/: test_jax.py  test_linear.py  test_numerical.py  test_torch.py  test_tree.py
